--- a/templates/hirebook.html
+++ b/templates/hirebook.html
@@ -171,7 +171,7 @@
 
 							<div class="form-group">
 								<span class="form-label">Pickup Location</span>
-								<input class="form-control" type="text" name="address" size="70" placeholder="Enter PickUp Location">
+								<input class="form-control" type="text" name="pickup" size="70" placeholder="Enter PickUp Location">
 							</div>
 							<div class="form-group">
 								<span class="form-label">Pickup Date</span>
