--- a/templates/maintanencehire.html
+++ b/templates/maintanencehire.html
@@ -41,7 +41,7 @@ th {
     <th>Cost</th>
 	  
   </tr>
-  {% for i in q %}
+  {% for i in y %}
   <tr>
   <td>{{i.carid}}</td>
 	<td>{{i.cost}}</td>
