--- a/templates/driverrating.html
+++ b/templates/driverrating.html
@@ -42,12 +42,12 @@ th {
 
     <th></th>
   </tr>
-  {% for i in q %}
+  {% for i in y %}
   <tr>
-    <td>{{i.Did}}</td>
+    <td>{{i.firstname}}</td>
 	<td>{{i.rating}}</td>
 	
-	<td><a href="{% url 'hbookcar' i.HcarRegistration%}" style="float: right;margin-top: 5px;">REMOVE</a></td>
+	<td><a href="{% url 'removedriver' i.mobileno %}" style="float: right;margin-top: 5px;">remove</a></td>
 	</tr>
 	{% endfor %}
 	
