--- a/templates/edithirebooking.html
+++ b/templates/edithirebooking.html
@@ -35,12 +35,15 @@ th {
 <body>
 
 
+
+
 <table>
   
-
+<form class="form1" id="form" method="POST">
+{% csrf_token %}s
   <tr>
     <td>Address</td>
-	<td><input style="border:none" type="text" name="sedanprice" size="15" value="{{i.address}} "></td>
+	<td><input style="border:none" class= "input1"  type="text" name="address" size="15" value="{{i.address}} "></td>
 	
 	</tr>
 
@@ -48,13 +51,21 @@ th {
 
 	<tr>
     <td>Time</td>
-	<td><input style="border:none" type="text" name="hatchbackprice" size="15" value="{{i.time}}"></td>
+	<td><input style="border:none" class= "input1" type="text" name="time" size="15" value="{{i.time}}"></td>
 	
 	</tr>
 
-	
-	
-	
+	<tr>
+		
+
+		<td><button class="btn" type="submit">Submit</button></td>
+	</tr>
+
+
+
+</form>
+
+
 	
 	
 	
