--- a/templates/setprices.html
+++ b/templates/setprices.html
@@ -35,7 +35,7 @@ th {
 <body>
 
 <form  method="POST" class="form-horizontal" id="form" >
-	
+	{% csrf_token %}
 	<h3>Self drive</h3>
 <table>
   <tr>
@@ -112,8 +112,8 @@ th {
 	
 	
 </table>
+<button  type="submit">Submit</button>
 
-<input  type="submit"  size="15"  style="align-content: center;">
 </form>
 
 {% include 'footer.html' %}	
