--- a/templates/adminlogin.html
+++ b/templates/adminlogin.html
@@ -109,6 +109,7 @@ animation-iteration-count:infinite;
     <label for="pwd">Password:</label>
     <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
   </div>
+         <h5><a href="{% url 'adminregister' %}">register</a></h5>
   <button type="submit" class="btn btn-primary" id="btn" >Submit</button>
 </form>
   </div>
