--- a/templates/setprices.html
+++ b/templates/setprices.html
@@ -46,25 +46,25 @@ th {
 
   <tr>
     <td>Sedan</td>
-	<td><input style="border:none" type="text" name="selfsedanprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="selfsedanprice" size="15" ></td>
 	
 	</tr>
 
 	<tr>
     <td>Micro</td>
-	<td><input style="border:none" type="text" name="selfmicroprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="selfmicroprice" size="15" ></td>
 	
 	</tr>
 
 	<tr>
     <td>Hatchback</td>
-	<td><input style="border:none" type="text" name="selfhatchbackprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="selfhatchbackprice" size="15" ></td>
 	
 	</tr>
 
 	<tr>
     <td>Suv</td>
-	<td><input style="border:none" type="text" name="selfsuvprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="selfsuvprice" size="15" ></td>
 	
 	</tr>
 	
@@ -85,25 +85,25 @@ th {
 
   <tr>
     <td>Sedan</td>
-	<td><input style="border:none" type="text" name="hiresedanprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="hiresedanprice" size="15" ></td>
 	
 	</tr>
 
 	<tr>
     <td>Micro</td>
-	<td><input style="border:none" type="text" name="hiremicroprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="hiremicroprice" size="15" ></td>
 	
 	</tr>
 
 	<tr>
     <td>Hatchback</td>
-	<td><input style="border:none" type="text" name="hirehatchbackprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="hirehatchbackprice" size="15" ></td>
 	
 	</tr>
 
 	<tr>
     <td>Suv</td>
-	<td><input style="border:none" type="text" name="hiresuvprice" size="15" ></td>
+	<td><input style="border:none" type="number" name="hiresuvprice" size="15" ></td>
 	
 	</tr>
 	
