--- a/templates/hirecarrating.html
+++ b/templates/hirecarrating.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+{% include 'base.html' %}
 <head>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css'>
   
@@ -29,7 +28,7 @@
   background-color: #45a049;
 }
 
-div {
+.di {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
@@ -39,7 +38,7 @@ div {
 
 
 
-       
+
   @import url(https://fonts.googleapis.com/css?family=Roboto:500,100,300,700,400);
 *{
   margin: 0;
@@ -54,11 +53,11 @@ div {
   max-width: 280px;
  float: left;
 
-  height: 45px;
+  height: 60px;
 
-  
+
   color: #EEE;
-  margin-left: -16px;
+  margin-left: 32px;
     margin-top:  -45px;
 
   overflow: hidden;
@@ -66,14 +65,14 @@ div {
 
 
 
-.cont{
+.cont2{
   width: 93%;
   max-width: 280px;
  float: left;
 
-  height: 45px;
+  height: 60px;
 
-  
+
   color: #EEE;
   margin-left: -16px;
     margin-top:  -45px;
@@ -97,7 +96,9 @@ h1 span{
 
 div.stars{
   width: 270px;
+
   display: inline-block;
+  margin-bottom:20px;
 }
 
 input.star{
@@ -151,28 +152,12 @@ label.star:before{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </style>
 </head>
 <body>
 
 
-<div>
+<div class="di">
   <form method="POST">
 
     {% csrf_token %}
@@ -201,46 +186,47 @@ label.star:before{
 <h1>Service rating</h1>
     
 
-     <div class="cont">
+     <div class="cont" style="margin-top: -20px;">
 
       
 
 <div class="stars">
 
-  <input class="star star-15" id="star-15" type="radio" name="servicerat"/>
+  <input class="star star-15" id="star-15" value=5 type="radio" name="servicerat"/>
   <label class="star star-15" for="star-15"></label>
-  <input class="star star-14" id="star-14" type="radio" name="servicerat"/>
+  <input class="star star-14" id="star-14" value=4 type="radio" name="servicerat"/>
   <label class="star star-14" for="star-14"></label>
-  <input class="star star-13" id="star-13" type="radio" name="servicerat"/>
+  <input class="star star-13" id="star-13" value=3 type="radio" name="servicerat"/>
   <label class="star star-13" for="star-13"></label>
-  <input class="star star-12" id="star-12" type="radio" name="servicerat"/>
+  <input class="star star-12" id="star-12" value=2 type="radio" name="servicerat"/>
   <label class="star star-12" for="star-12"></label>
-  <input class="star star-11" id="star-11" type="radio" name="servicerat"/>
+  <input class="star star-11" id="star-11" value=1 type="radio" name="servicerat"/>
   <label class="star star-11" for="star-11"></label>
 
 </div>
-  
+
 </div>
 
 <br><br><br><br><br>
 
 <div style="float: left;">
 
-<h1 style="margin-top: -50px;margin-left: -20px;">Car rating</h1>
+<h1 style="margin-top: -50px;margin-left: -5px;">Car rating</h1>
 
-     <div class="cont" style="margin-left: -30px">
+     <div class="cont2" style="margin-left: 30px;margin-top: -20px;">
 
 <div class="stars">
 
-  <input class="star star-25" id="star-25" type="radio" name="driverrating"/>
+  <input class="star star-25" id="star-25" value=5 type="radio" name="driverrating"/>
   <label class="star star-25" for="star-25"></label>
-  <input class="star star-24" id="star-24" type="radio" name="driverrating"/>
+  <input class="star star-24" id="star-24" value=4 type="radio" name="driverrating"/>
   <label class="star star-24" for="star-24"></label>
-  <input class="star star-23" id="star-23" type="radio" name="driverrating"/>
+  <input class="star star-23" id="star-23" value=3 type="radio" name="driverrating"/>
   <label class="star star-23" for="star-23"></label>
-  <input class="star star-22" id="star-22" type="radio" name="driverrating"/>
+  <input class="star star-22" id="star-22" value=2 type="radio" name="driverrating"/>
   <label class="star star-22" for="star-22"></label>
-  <input class="star star-21" id="star-21" type="radio" name="driverrating"/>
+  <input class="star star-21" id="star-21" value=1 type="radio" name="driverrating"/>
+
   <label class="star star-21" for="star-21"></label>
 
 </div>
@@ -258,4 +244,4 @@ label.star:before{
 </div>
 
 </body>
-</html>
+{% include 'footer.html' %}
