--- a/templates/selfcancelbooking.html
+++ b/templates/selfcancelbooking.html
@@ -25,7 +25,7 @@ select {
   background-color: #45a049;
 }
 
-div {
+.di {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
@@ -37,7 +37,7 @@ div {
 
 
 
-<div>
+<div class="di">
   <form method="POST" class="form1">
     
         {% csrf_token %}
