--- a/templates/selfcarrating.html
+++ b/templates/selfcarrating.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css'>
-  
+
   <style>
  select {
   width: 100%;
@@ -29,7 +29,7 @@
   background-color: #45a049;
 }
 
-div {
+.di {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
@@ -54,11 +54,11 @@ div {
   max-width: 280px;
  float: left;
 
-  height: 45px;
+  height: 60px;
 
 
   color: #EEE;
-  margin-left: -16px;
+  margin-left: 32px;
     margin-top:  -45px;
 
   overflow: hidden;
@@ -66,12 +66,12 @@ div {
 
 
 
-.cont{
+.cont2{
   width: 93%;
   max-width: 280px;
  float: left;
 
-  height: 45px;
+  height: 60px;
 
 
   color: #EEE;
@@ -97,7 +97,9 @@ h1 span{
 
 div.stars{
   width: 270px;
+
   display: inline-block;
+  margin-bottom:20px;
 }
 
 input.star{
@@ -154,7 +156,7 @@ label.star:before{
 <body>
 
 
-<div>
+<div class="di">
   <form method="POST" id="form">
 
     {% csrf_token %}
@@ -179,66 +181,65 @@ label.star:before{
 
 
 
-    
-<h1>Service rating</h1>
-    
 
-     <div class="cont">
+<h1 >Service rating</h1>
 
-      
+
+     <div class="cont" style="margin-top: -20px;">
+
+
 
 <div class="stars">
 
-  <input class="star star-15" id="star-15" type="radio" name="servicerat"/>
+  <input class="star star-15" id="star-15" value=5 type="radio" name="servicerat"/>
   <label class="star star-15" for="star-15"></label>
-  <input class="star star-14" id="star-14" type="radio" name="servicerat"/>
+  <input class="star star-14" id="star-14" value=4 type="radio" name="servicerat"/>
   <label class="star star-14" for="star-14"></label>
-  <input class="star star-13" id="star-13" type="radio" name="servicerat"/>
+  <input class="star star-13" id="star-13" value=3 type="radio" name="servicerat"/>
   <label class="star star-13" for="star-13"></label>
-  <input class="star star-12" id="star-12" type="radio" name="servicerat"/>
+  <input class="star star-12" id="star-12" value=2 type="radio" name="servicerat"/>
   <label class="star star-12" for="star-12"></label>
-  <input class="star star-11" id="star-11" type="radio" name="servicerat"/>
+  <input class="star star-11" id="star-11" value=1 type="radio" name="servicerat"/>
   <label class="star star-11" for="star-11"></label>
 
 </div>
-  
+
 </div>
 
 <br><br><br><br><br>
 
-<div style="float: left;">
 
-<h1 style="margin-top: -50px;margin-left: -20px;">Car rating</h1>
 
-     <div class="cont" style="margin-left: -30px">
+<h1 style="margin-top: -50px;margin-left: -5px;">Car rating</h1>
 
-<div class="stars">
+     <div class="cont2" style="margin-left: 30px;margin-top: -20px;">
 
-  <input class="star star-25" id="star-25" type="radio" name="carrating"/>
+<div class="stars"  >
+
+  <input class="star star-25" id="star-25" value=5 type="radio" name="carrating"/>
   <label class="star star-25" for="star-25"></label>
-  <input class="star star-24" id="star-24" type="radio" name="carrating"/>
+  <input class="star star-24" id="star-24" value=4 type="radio" name="carrating"/>
   <label class="star star-24" for="star-24"></label>
-  <input class="star star-23" id="star-23" type="radio" name="carrating"/>
+  <input class="star star-23" id="star-23" value=3 type="radio" name="carrating"/>
   <label class="star star-23" for="star-23"></label>
-  <input class="star star-22" id="star-22" type="radio" name="carrating"/>
+  <input class="star star-22" id="star-22" value=2 type="radio" name="carrating"/>
   <label class="star star-22" for="star-22"></label>
-  <input class="star star-21" id="star-21" type="radio" name="carrating"/>
+  <input class="star star-21" id="star-21" value=1 type="radio" name="carrating"/>
   <label class="star star-21" for="star-21"></label>
 
 </div>
-  
-</div>
 
 </div>
+
+
 
 <br><br>
 
-    
-  
+
+
     <button class="btnrat" type="submit">Submit</button>
   </form>
 </div>
 
 </body>
 {% include 'footer.html' %}
-
