--- a/templates/adminbase.html
+++ b/templates/adminbase.html
@@ -77,6 +77,7 @@ body {
       <div class="list-group list-group-flush">
         <a href="#" class="list-group-item list-group-item-action bg-light">Bookings</a>
 		<a href="{% url 'IssueSalary' %}" class="list-group-item list-group-item-action bg-light">Salary</a>
+        <a href="{% url 'setprices' %}" class="list-group-item list-group-item-action bg-light">SetPrices</a>
 		<a href="{% url 'adddriver' %}" class="list-group-item list-group-item-action bg-light">Add Employee</a>
 		<a href="{% url 'selfbookings' %}" class="list-group-item list-group-item-action bg-light">SelfBookings</a>
 		<a href="{% url 'hirebookings' %}" class="list-group-item list-group-item-action bg-light">HireBookings</a>
