--- a/templates/driverendride.html
+++ b/templates/driverendride.html
@@ -50,6 +50,7 @@ select,input {
       <option value="Heavy damage">Heavy damage</option>
       <option value="Scratches">Scratches</option>
       <option value="Tyre patches">Tyre patches</option>
+        <option value="nothing" selected>Nothing</option>
     </select>
 
          Damage Cost :<input type="number" name="damagecost" >
