--- a/templates/base.html
+++ b/templates/base.html
@@ -99,16 +99,14 @@ body {
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'Userhome' %}">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
+
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hello!!! {{n.firstname}}
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{% url 'UserDetailsView' %}">Profile</a>
-                <a class="dropdown-item" href="#">ContactUs</a>
+                <a class="dropdown-item" href="{% url 'contactus' %}">ContactUs</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'Userlogout' %}">Logout!!!</a>
               </div>
