--- a/templates/contact.html
+++ b/templates/contact.html
@@ -137,14 +137,14 @@ header {
       <article>
         <h1>Admin</h1>
         <h1>Contact no:</h1>
-        <h1>8074736385</h1>
+        <h1>9515645091</h1>
         <span>Manoj Varma</span>
       </article>
     </a>
   </div>
   <div class="item-4" style="margin-left: 150px;width: 250px;height: 400px;">
     <a href="#" class="card" style="border-style: double;border-color: white;border-radius: 25px;">
-      <img src="hi.jpg" style="width: 100%;height: 220px;border-radius: 50%;">
+      <img src="{% static 'chitti.jpg' %}" style="width: 100%;height: 220px;border-radius: 50%;">
       <article>
         <h1>Admin</h1>
         <h1>Contact no:</h1>
@@ -163,7 +163,7 @@ header {
   
   <div class="item-2" style=" margin-top:10px;float:left;margin-left: 250px;width: 250px;height: 400px;">
     <a href="#" class="card" style="border-style: double;border-color: white;border-radius: 25px;">
-      <img src="hi.jpg" style="width: 100%;height: 220px;border-radius: 50%;">
+      <img src="{% static 'nvs.png' %}" style="width: 100%;height: 220px;border-radius: 50%;">
       <article>
         <h1>Admin</h1>
         <h1>Contact no:</h1>
@@ -174,7 +174,7 @@ header {
   </div>
   <div class="item-3" style="margin-top:10px;margin-left: 150px;width: 250px;height: 400px;">
     <a href="#" class="card" style="border-style: double;border-color: white;border-radius: 25px;">
-      <img src="hi.jpg" style="width: 100%;height: 220px;border-radius: 50%;">
+      <img src="{% static 'puli.jpg' %}" style="width: 100%;height: 220px;border-radius: 50%;">
       <article>
         <h1>Admin</h1>
         <h1>Contact no:</h1>
