--- a/templates/adminbase.html
+++ b/templates/adminbase.html
@@ -84,6 +84,7 @@ body {
         <a href="{% url 'maintanenceself' %}" class="list-group-item list-group-item-action bg-light">SelfMaintenance</a>
         <a href="{% url 'maintanencehire' %}" class="list-group-item list-group-item-action bg-light">HireMaintenance</a>
         <a href="{% url 'driverratings' %}" class="list-group-item list-group-item-action bg-light">DriverRatings</a>
+        <a href="{% url 'checkavailability' %}" class="list-group-item list-group-item-action bg-light">SetAvailabilty</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
